src-ken&y/objects/Working_Day__c.object
<CustomObject>
    <customHelpPage>HelpWorkingDay</customHelpPage>
    <fields>
        <fullName>Calendar__c</fullName>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Working Days</relationshipLabel>
        <relationshipName>Working_Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>Working Day</label>
    <nameField>
        <displayFormat>WD-{0000000000}</displayFormat>
        <label>Working Day</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Working Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_date_and_end_date_must_be_the_same</fullName>
        <active>true</active>
        <description>Start date and end date must be the same</description>
        <errorConditionFormula>DATEVALUE(Start__c) != DATEVALUE(End__c)</errorConditionFormula>
        <errorMessage>Start date and end date must be the same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_time_must_be_before_end_time</fullName>
        <active>true</active>
        <description>Start time must be before end time</description>
        <errorConditionFormula>Start__c &gt;= End__c</errorConditionFormula>
        <errorMessage>Start time must be before end time</errorMessage>
    </validationRules>
</CustomObject>